[gd_scene load_steps=20 format=3 uid="uid://dtwnrl01xhx6s"]

[ext_resource type="Script" uid="uid://gtiwnxusvmup" path="res://scripts/player/player.gd" id="1_p47bc"]
[ext_resource type="Script" uid="uid://d4niaukgkc04v" path="res://scripts/player/player_camera.gd" id="3_0owmy"]
[ext_resource type="Texture2D" uid="uid://d00tyvano74ae" path="res://materials/dev/arona.png" id="4_qek5x"]
[ext_resource type="Script" uid="uid://cqtrqdrsj5tjr" path="res://scripts/debug_draw.gd" id="5_5gtgg"]
[ext_resource type="PackedScene" uid="uid://bijmturqw25pu" path="res://models/dev/npc_ak/npc_ak.gltf" id="5_qek5x"]
[ext_resource type="PackedScene" uid="uid://c6c1ce7lx7lum" path="res://scenes/vfx/muzzle.tscn" id="6_5gtgg"]
[ext_resource type="Script" uid="uid://5xhlwder3lyo" path="res://scripts/ui/player_ui.gd" id="6_75vfm"]
[ext_resource type="Script" uid="uid://c4h7oxn5mw3bo" path="res://scripts/ui/crosshair.gd" id="7_0owmy"]
[ext_resource type="PackedScene" uid="uid://ftwik2jflrd3" path="res://scenes/npcs/avatars/npc_test_avatar.tscn" id="7_h17s1"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_utdxe"]
height = 1.6
radius = 0.3

[sub_resource type="CylinderShape3D" id="CylinderShape3D_p47bc"]
height = 1.0
radius = 0.3

[sub_resource type="SphereMesh" id="SphereMesh_p47bc"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p47bc"]
distance_fade_mode = 3
distance_fade_min_distance = 1.25
distance_fade_max_distance = 1.5

[sub_resource type="CylinderMesh" id="CylinderMesh_o5e40"]
material = SubResource("StandardMaterial3D_p47bc")
top_radius = 0.3
bottom_radius = 0.3
height = 1.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_75vfm"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0
cull_mode = 2
albedo_texture = ExtResource("4_qek5x")
texture_filter = 5

[sub_resource type="PlaneMesh" id="PlaneMesh_22kw3"]
material = SubResource("StandardMaterial3D_75vfm")
size = Vector2(1.6, 1.6)

[sub_resource type="AudioStreamPolyphonic" id="AudioStreamPolyphonic_5gtgg"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6ks2j"]
height = 1.0
radius = 0.4

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5gtgg"]
height = 1.6
radius = 0.3

[node name="Node3D3" type="Node3D" node_paths=PackedStringArray("model")]
script = ExtResource("1_p47bc")
model = NodePath("PlayerAvatar")

[node name="Node3D" type="Node3D" parent="."]

[node name="Node3D2" type="Node3D" parent="."]

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
shape = SubResource("CylinderShape3D_utdxe")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.299672, 0)
shape = SubResource("CylinderShape3D_p47bc")
disabled = true

[node name="PlayerCameraArm" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.401602, 0)
script = ExtResource("3_0owmy")

[node name="Camera3D" type="Camera3D" parent="PlayerCameraArm"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 1, 3)
current = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerCameraArm"]
visible = false
mesh = SubResource("SphereMesh_p47bc")

[node name="PlayerGraphics" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transparency = 1.0
mesh = SubResource("CylinderMesh_o5e40")
skeleton = NodePath("")

[node name="MeshInstance3D" type="MeshInstance3D" parent="PlayerGraphics"]
transform = Transform3D(-1, 8.74228e-08, -3.82137e-15, 0, -4.37114e-08, -1, -8.74228e-08, -1, 4.37114e-08, 0, 0, -0.337136)
visible = false
mesh = SubResource("PlaneMesh_22kw3")

[node name="Sketchfab_Scene" parent="PlayerGraphics" instance=ExtResource("5_qek5x")]
transform = Transform3D(-4.37114e-10, 0, 0.01, 0, 0.01, 0, -0.01, 0, -4.37114e-10, 0.28, 0, -0.669315)

[node name="Muzzle" type="Marker3D" parent="PlayerGraphics/Sketchfab_Scene"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 91.5083, 9.33153, 0)

[node name="MuzzleFlash" parent="PlayerGraphics/Sketchfab_Scene/Muzzle" instance=ExtResource("6_5gtgg")]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-06, 0, -100, 0, 100, 0, 100, 0, -4.37114e-06, 0, 0, 0)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="PlayerGraphics"]
unique_name_in_owner = true
stream = SubResource("AudioStreamPolyphonic_5gtgg")

[node name="GhostBody" type="AnimatableBody3D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0
sync_to_physics = false

[node name="CollisionShape3D2" type="CollisionShape3D" parent="GhostBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("CylinderShape3D_6ks2j")
debug_color = Color(0.952314, 3.7542e-06, 0.559264, 0.42)

[node name="HBDebugDraw" type="Node3D" parent="."]
script = ExtResource("5_5gtgg")
metadata/_custom_type_script = ExtResource("5_5gtgg")

[node name="PlayerUI" type="CanvasLayer" parent="."]
script = ExtResource("6_75vfm")

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerUI"]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="HealthLabel" type="Label" parent="PlayerUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CamoIndexLabel" type="Label" parent="PlayerUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AlertStatusLabel" type="Label" parent="PlayerUI/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PlayerUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Crosshair" type="Control" parent="PlayerUI/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
script = ExtResource("7_0owmy")

[node name="Bloody" type="ColorRect" parent="PlayerUI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 1)

[node name="AlertMetersContainer" type="Control" parent="PlayerUI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerHitbox" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("CylinderShape3D_5gtgg")
debug_color = Color(0.95171, 0.185773, 0.310269, 0.42)

[node name="PlayerAvatar" parent="." instance=ExtResource("7_h17s1")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.780654, 0)

[connection signal="camouflage_index_changed" from="." to="PlayerUI" method="update_camo_index"]
[connection signal="health_changed" from="." to="PlayerUI" method="_on_player_health_changed"]
[connection signal="weapon_equipped" from="." to="PlayerUI" method="_on_player_weapon_equipped"]
[connection signal="weapon_spread_changed" from="." to="PlayerUI" method="_on_player_weapon_spread_changed"]
[connection signal="weapon_unequipped" from="." to="PlayerUI" method="_on_player_weapon_unequipped"]
